<resources>
    <string name="app_name">PizzAria</string>
    <string name="all_rights_reserved_2022">All rights Reserved 2022</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo">TODO</string>
    <string name="welcome_username">Welcome, USERNAME</string>
    <string name="press_to_continue">Press to continue...</string>
    <string name="incorrect_username">Incorrect Name, names can\'t contain numbers or special characters.</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_password">Incorrect Password \nPassword must contain 8 to 16 characters.\nMust not contain special characters.</string>
    <string name="incorrect_confirm_password">Passwords don\'t match.</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="promotional_offers">Promotional Offers</string>
    <string name="order_and_eat">Order And Eat</string>
    <string name="hi_user">Hello User,</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>
    <string name="categories">Categories</string>
    <string name="margarita">Margarita</string>
    <string name="olive_ham">Olive, Ham</string>
    <string name="_8_95">8.95€</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="home_user_name">Hello %1$s</string>
    <string name="failed_connection_db">Failed to connect to database.</string>
    <string name="welcome_user_name">Welcome, %1$s</string>
    <string name="price_food_item">%1$s€</string>
    <string name="total">Total</string>
    <string name="x4">x4</string>
    <string name="_200_76">200.76€</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="orders">Orders</string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="totalItems">x%1$d</string>
    <string name="totalPrice">%,.2f€</string>
    <string name="empty_cart">No items in cart</string>
    <string name="allergies">Allergies</string>
    <string name="address">Address</string>
    <string name="number">Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0">0</string>
    <string name="deliveries">Deliveries</string>
    <string name="first_last">First Last</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="firstLast">%1$s %2$s</string>
    <string name="security_settings">Security Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="ask_for_help">Ask for help</string>
    <string name="give_us_feedback">Give us feedback!</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="mm_yy">MM/YY</string>
    <string name="expire_date">Expire Date</string>
    <string name="xxx">XXX</string>
    <string name="security_code">Security Code</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX XXXX XXXX XXXX</string>
    <string name="card_number">Card Number</string>
    <string name="credit_card">Credit Card</string>
    <string name="delivery">Delivery</string>
    <string name="takeaway">Takeaway</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="password_change_request_will_be_emailed_to_you">Password change request will be emailed to you.</string>
    <string name="send">Send</string>
    <string name="warning">Warning</string>
    <string name="credit_card_information_is_incorrect">Credit card information is incorrect.</string>
    <string name="confirm">Confirm</string>
    <string name="successfull">Successfull</string>
    <string name="failed">Failed</string>
    <string name="loading">Loading</string>
    <string name="clear">Clear</string>
</resources>