<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_weight="0"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/totalItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.2"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalNumItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.2"
        android:text="@string/x4"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalPriceItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:shadowColor="@color/black"
        android:shadowDx="1.2"
        android:shadowDy="1.2"
        android:shadowRadius="1.2"
        android:text="@string/_200_76"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>